[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enflow"
version = "0.0.3.post1"
authors = [
    { name = "rebase.energy" }
]
description = "⚡ Open-source framework for sequential decision problems in the energy sector"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "energydatamodel>=0.0.2",
    "gymnasium>=1.1.1",
]

[project.urls]
Homepage = "https://enflow.org"
Repository = "https://github.com/rebase-energy/enflow"
Documentation = "https://docs.enflow.org/en/latest"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.7",
    "sphinx==7.2.6",
    "sphinx-autodoc-typehints>=2.0.1",
    "sphinx-rtd-theme>=3.0.2",    
    "twine>=6.1.0", 
]

[tool.setuptools]
packages = ["enflow"]
